# jira-tools

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: check.yaml
sprintreport/: __init__.py
templates/: main.md  markdown.md  remark.html
templates/sections/: carried.md  completed.md  dependencies.md  epics.md  introduction.md  issues.md  next.md
tests/: test_main.py
tools/: __init__.py  client.py  model.py
