[project]
name = "jira-tools"
description = "A collection of JIRA utilities"
version = "0.1.0"
authors = [
    { name = "Ralph Bean", email = "rbean@redhat.com" }
]
readme = "README.md"
dependencies = ["jira", "jinja2"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.optional-dependencies]
dev = [
    "tox",
]
